2011-01-26  John W. Eaton  <jwe@octave.org>

2011-01-26  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>
	    John W. Eaton  <jwe@octave.org>

	* graphics.h.in (scaler::scaler (const std::string&)): New constructor.
	(graphics_handle::operator++, graphics_hanlde::operator--):
	Implement as recommended by Effective C++.

	* graphics.h.in (class base_property, class array_property,
	class children_property, class property, class graphics_xform,
	class graphics_event): Explicitelly iniatialize
	all data members in constructor initialisation list.
	* gl-render.cc (class patch_tesselator): Likewise
	* graphics.cc (class radio_values, class gh_manager),
	(class callback_event, class set_event): Likewise.

	* graphics.h.in (class base_graphics_property): Disallow copying.
	* graphics.cc (class function_event): Likewise.
	(function_event::function_event (void)): Delete implementation.

2011-01-25  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/config-module.awk: Use automake variable for 
	portability.
	* Makefile.am (uninstall-oct): Use GNU Make features for portability

2011-01-25  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/fft.cc, DLD-FUNCTIONS/fft2.cc, DLD-FUNCTIONS/fftn.cc,
	load-save.cc: Make docstrings static by removing documentation
	depending on #ifdef configuration variables.

2011-01-25  John W. Eaton  <jwe@octave.org>

	* Makefile.am (OCT_STAMP_FILES): New variable.
	(DISTCLEANFILES): Add $(OCT_STAMP_FILES) to the list.
	(all-local): Depend on $(OCT_STAMP_FILES) instead of $(OCT_FILES).

	* DLD-FUNCTIONS/config-module.awk: Create stamp files when
	creating .oct file links.

2011-01-25  Konstantinos Poulios  <logari81@googlemail.com>

	* src/graphics.cc (text::properties::update_text_extent):
	Disable warning about missing freetype library.

2011-01-25  Konstantinos Poulios  <logari81@googlemail.com>

	* src/graphics.cc (axes::properties::calc_ticks_and_lims):
	Fixing wrong dimensions of minor ticks vector.

2011-01-25  John W. Eaton  <jwe@octave.org>
