@@ -1300,6 +1300,14 @@ octave_value::subsasgn (const std::string& type,
   return rep->subsasgn (type, idx, rhs);
 }
 
+octave_value
+octave_value::undef_subsasgn (const std::string& type,
+                              const std::list<octave_value_list>& idx,
+                              const octave_value& rhs)
+{
+  return rep->undef_subsasgn (type, idx, rhs);
+}
+
 octave_value&
 octave_value::assign (assign_op op, const std::string& type,
                       const std::list<octave_value_list>& idx,
